--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				<ul class="nav__wrapper">
 					<li><a class="nav__link" href="#">Home</a></li>
 					<li><a class="nav__link" href="#">About</a></li>
-					<li><a class="nav__link" href="#"><img src="img/logo.png"></a></li>
+					<li><a class="nav__link" href="#"><img src="img/Logo.png"></a></li>
 					<li><a class="nav__link" href="#">Service</a>
 					</li>
 					<li><a class="nav__link" href="#">Contact</a></li>
 				</ul>
 
 				<ul class="nav__wrapper-resize nav_resize">
-					<li><a class="nav__link" href="#"><img src="img/logo.png"></a></li>
+					<li><a class="nav__link" href="#"><img src="img/Logo.png"></a></li>
 					<div class="nav__burger nav_resize">
 						<a href="#" class="burger-menu__btn"><span></span></a>
 					</div>
